# stlOptimalBoundingBox_CGAL

./: .gitignore  CMakeLists.txt  README.md  capStlOfOBB.cpp  optimalBoundingBox.cpp
